# osmscout-ml

./: CMakeLists.txt  README.md
.github/workflows/: build_on_ubuntu_24_04.yml  pytest_on_ubuntu_24_04.yml
ml-training/: .gitignore  README.md  pyproject.toml
ml-training/src/: train.py
ml-training/src/junction_ml/: __init__.py
ml-training/src/junction_ml/data/: __init__.py
ml-training/src/junction_ml/models/: __init__.py
ml-training/src/junction_ml/training/: __init__.py
ml-training/src/junction_ml/utils/: __init__.py
src/: JunctionGraphExport.cpp  JunctionGraphProcessor.cpp  JunctionGraphProcessor.h  PredictJunction.cpp  RandomJunctionGraphExport.cpp
