[tool.poetry]
name = "junction-ml"
version = "0.1.0"
description = "ML model for predicting junction lane suggestions"
authors = ["OSMScout ML"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.0,<3.14.0"
torch = "^2.8.0"
torch-geometric = "^2.6.1"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
pandas-stubs = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.13.2"
types-seaborn = "^0.13.2.20250809"
jupyter = "^1.0.0"
tensorboard = "^2.13.0"
tqdm = "^4.65.0"
types-tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mypy = "^0.10.3"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
#testpaths = ["tests"]
addopts = [
    "--mypy",
    "--strict-markers",
    "-v"
]
